# irrlicht-android

./: .gitmodules  CMakeLists.txt  do-nsighttegra-configure.cmake  fake-gles-render.c
android-studio/: settings.gradle
android-studio/gradle/wrapper/: gradle-wrapper.properties
android-studio/mobile/: build.gradle
android-studio/mobile/src/androidTest/java/nm/clrn/org/irrandroid/: ExampleInstrumentedTest.java
android-studio/mobile/src/main/: AndroidManifest.xml
android-studio/mobile/src/test/java/nm/clrn/org/irrandroid/: ExampleUnitTest.java
android-studio/nmcore/: build.gradle
android-studio/nmcore/src/main/: AndroidManifest.xml
android-studio/sdl/: build.gradle
android-studio/sdl/src/main/: AndroidManifest.xml
android-studio/tv/: build.gradle
android-studio/tv/src/main/: AndroidManifest.xml
android-studio/tv/src/main/res/values/: strings.xml
packaging/: AndroidManifest.xml.in
packaging/java/org/cltn/nm/irrandroid/: IrrlichtSDLActivity.java
